Fix contrast between placeholder text and background for search input

--- a/stylesheets/components/SearchInput.scss
+++ b/stylesheets/components/SearchInput.scss
@@ -31,29 +31,6 @@
   }
 
   &__input {
-    background: transparent;
-    border: none;
-    padding-inline-start: 16px;
-    width: 100%;
-
-    &:placeholder {
-      color: $color-gray-45;
-    }
-
-    @include light-theme {
-      color: $color-black;
-    }
-
-    @include dark-theme {
-      color: $color-gray-05;
-    }
-
-    &:focus {
-      outline: none;
-    }
-  }
-
-  &__input {
     @include font-body-2;
     border: solid 1px transparent;
     border-radius: 8px;
@@ -62,7 +39,7 @@
     width: 100%;
 
     @include light-theme {
-      background-color: $color-black-alpha-08;
+      background-color: $color-black-alpha-06;
       color: $color-gray-90;
 
       &:placeholder {
